@@ -25,12 +25,16 @@
 */
 
 #include "CoreFoundation/CFRuntime.h"
+#include "CoreFoundation/CFData.h"
 #include "CoreFoundation/CFDictionary.h"
 #include "CoreFoundation/CFNumber.h"
+#include "CoreFoundation/CFString.h"
+#include "CoreFoundation/CFURL.h"
 #include "CoreFoundation/CFXMLParser.h"
 #include "GSPrivate.h"
 
 #include <stdlib.h>
+#include <string.h>
 
 CONST_STRING_DECL(kCFXMLTreeErrorDescription,
   "kCFXMLTreeErrorDescription");
@@ -41,7 +45,51 @@ CONST_STRING_DECL(kCFXMLTreeErrorLocation,
 CONST_STRING_DECL(kCFXMLTreeErrorStatusCode,
   "kCFXMLTreeErrorStatusCode");
 
+struct __CFXMLParser
+{
+  CFRuntimeBase         parent;
+  CFXMLParserStatusCode _errorCode;
+  CFStringRef           _errorDesc;
+  CFDataRef             _data;
+  CFURLRef              _dataSrc;
+  CFIndex               _nodeVersion;
+  CFXMLParserOptions    _options;
+  CFXMLParserCallBacks  _callBacks;
+  CFXMLParserContext    _context;
+};
+
 static CFTypeID _kCFXMLParserTypeID = 0;
+
+static void
+CFXMLParserFinalize (CFTypeRef cf)
+{
+  CFXMLParserRef parser = (CFXMLParserRef)cf;
+  
+  CFRelease (parser->_data);
+  CFRelease (parser->_dataSrc);
+  if (parser->_errorDesc)
+    CFRelease (parser->_errorDesc);
+}
+
+static const CFRuntimeClass CFXMLParserClass =
+{
+  0,
+  "CFXMLParser",
+  NULL,
+  NULL,
+  CFXMLParserFinalize,
+  NULL,
+  NULL,
+  NULL,
+  NULL
+};
+
+void CFXMLParserInitialize (void)
+{
+  _kCFXMLParserTypeID = _CFRuntimeRegisterClass (&CFXMLParserClass);
+}
+
+
 
 CFTypeID
 CFXMLParserGetTypeID (void)
@@ -51,29 +99,58 @@ CFXMLParserGetTypeID (void)
 
 void
 CFXMLParserAbort (CFXMLParserRef parser, CFXMLParserStatusCode errorCode,
-  CFStringRef errorDescription)
+                  CFStringRef errorDesc)
 {
-  
+  parser->_errorCode = errorCode;
+  parser->_errorDesc = CFStringCreateCopy (CFGetAllocator(parser), errorDesc);
 }
 
 CFStringRef
 CFXMLParserCopyErrorDescription (CFXMLParserRef parser)
 {
-  return NULL;
+  return CFRetain (parser->_errorDesc);
 }
 
+#define CFXMLPARSER_SIZE sizeof(struct __CFXMLParser) - sizeof(CFRuntimeBase)
+
 CFXMLParserRef
-CFXMLParserCreate (CFAllocatorRef allocator, CFDataRef xmlData,
-  CFURLRef dataSource, CFOptionFlags parseOptions, CFIndex versionOfNodes,
-  CFXMLParserCallBacks *callBacks, CFXMLParserContext *context)
+CFXMLParserCreate (CFAllocatorRef alloc, CFDataRef xmlData,
+                   CFURLRef dataSource, CFOptionFlags parseOptions,
+                   CFIndex versionOfNodes, CFXMLParserCallBacks *callBacks,
+                   CFXMLParserContext *context)
 {
-  return NULL;
+  struct __CFXMLParser *new;
+  
+  new = (struct __CFXMLParser*)_CFRuntimeCreateInstance (alloc,
+                                                         _kCFXMLParserTypeID,
+                                                         CFXMLPARSER_SIZE, 0);
+  if (new)
+    {
+      new->_errorCode = kCFXMLStatusParseNotBegun;
+      new->_data = CFDataCreateCopy (alloc, xmlData);
+      if (dataSource)
+        new->_dataSrc = CFURLCopyAbsoluteURL (dataSource);
+      new->_nodeVersion = versionOfNodes;
+      new->_options = parseOptions;
+      if (callBacks)
+        memcpy (&new->_callBacks, callBacks, sizeof(CFXMLParserCallBacks));
+      if (context)
+        {
+          memcpy (&new->_context, context, sizeof(CFXMLParserContext));
+          if (new->context.retain)
+            new->context.retain (new->context.info);
+        }
+    }
+  
+  return new;
 }
 
 CFXMLParserRef
-CFXMLParserCreateWithDataFromURL (CFAllocatorRef allocator,
-  CFURLRef dataSource, CFOptionFlags parseOptions, CFIndex versionOfNodes,
-  CFXMLParserCallBacks *callBacks, CFXMLParserContext *context)
+CFXMLParserCreateWithDataFromURL (CFAllocatorRef alloc, CFURLRef dataSource,
+                                  CFOptionFlags parseOptions,
+                                  CFIndex versionOfNodes,
+                                  CFXMLParserCallBacks *callBacks,
+                                  CFXMLParserContext *context)
 {
   return NULL;
 }
